добавил первую секцию

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ua">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -22,6 +22,12 @@
        </nav>
 
     </Header>
+    <main>
+       <section> 
+        <h1>Ефективні рішення для вашого бізнесу</h1>
+        <p>Замовити послугу</p>
+    </section>
+    </main>
     
 </body>
 </html>
