--- a/index.html
+++ b/index.html
@@ -48,6 +48,15 @@
             </li>
         </ul>
        </section>
+       <section>
+        <h2>Чим ми займаємося</h2>
+        <ul>
+            <li><img src="/images/img.png" alt="Написание кода"></li>
+            <li><img src="/images/img (1).png" alt="Программы для телефона"></li>
+            <li><img src="/images/img.png" alt="Художественное оформление"></li>
+        </ul>
+        
+       </section>
 
     </main>
     
