--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
     <main>
        <section> 
         <h1>Ефективні рішення для вашого бізнесу</h1>
-        <p>Замовити послугу</p>
+        <button type="button">Замовити послугу</button>
+        
        </section>
        <section>
         <h2>Наши відмінності</h2>
