--- a/index.html
+++ b/index.html
@@ -59,6 +59,27 @@
         </ul>
         
        </section>
+       <section>
+        <h2>Наша команда</h2>
+        <ul>
+            <li><img width="270" src="/images/Демьяненко.jpg" alt="Ігор Дем'яненко">
+                <h3>Ігор Дем'яненко</h3>
+                <p>Product Designer</p>
+            </li>
+            <li><img width="270" src="/images/Репина.jpg" alt="Ольга Рєпіна">
+                <h3>Ольга Рєпіна</h3>
+                <p>Frontend Developer</p>
+            </li>
+            <li><img width="270" src="/images/Тарасов.jpg" alt="Микола Тарасов">
+                <h3>Микола Тарасов</h3>
+                <p>Marketing</p>
+            </li>
+            <li><img width="270" src="/images/Ермаков.jpg" alt="Михайло Єрмаков">
+                <h3>Михайло Єрмаков</h3>
+                <p>UI Designer</p>
+            </li>
+        </ul>
+       </section>
 
     </main>
     
