--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
        <section>
         <h2>Чим ми займаємося</h2>
         <ul>
-            <li><img width="370" src="/images/img.png" alt="Написание кода"></li>
+            <li><img width="370" src="./images/img.png" alt="Написание кода"></li>
             <li><img width="370" src="/images/img (1).png" alt="Программы для телефона"></li>
             <li><img width="370" src="/images/img.png" alt="Художественное оформление"></li>
         </ul>
